@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: fix item's chance in treasure display. Show % and chance out of total.
+Nicolas Weeger 2010-09-04
+
 CRE: extract various things to 'ResourcesManager'.
 This gets back archetypes and treasure sorting, without messing the
 treasure list's ordering.
